fixtures/parser/valid/arrays.php
<?php
$a = [1, 2, 3,];
$b = ["key" => $value, ...$extra];
$c = array("x" => 1, &$ref,);
$d = [[1], ["nested" => [2]]];
