fixtures/parser/invalid/arrays_invalid.php
<?php
// invalid: array literals are missing closing delimiters and values
$a = [1, 2;
$b = array("x" => );
